# t-hack_2025

./: LICENSE  README.md  pom.xml  pyproject.toml
app/: main.py  requirements.txt  run.py
app/auth/: code_model.py  database.py  main.py  route.py  schemas.py
app/models/: user.py
app/repositories/: user.py
app/routes/: user.py
app/tg_bot/: bot.py  main.py  message_generator.py  tasks_data.py  telegram_bot.py  telegram_bot_model.py
app/tg_bot/schemas/: category.py  category_create.py  task.py  task_create.py
app/tg_bot/views/: task.py
src/main/java/org/example/config/: MySessionFactory.java
src/main/java/org/example/controllers/: CategoryServlet.java  TaskServlet.java
src/main/java/org/example/entity/: Category.java  Task.java  User.java
src/main/java/org/example/mapper/: JsonCategoryMapper.java  JsonTaskMapper.java
src/main/java/org/example/repository/: CategoryRepository.java  Repository.java  TaskRepository.java  UserRepository.java
src/main/resources/: hibernate.properties  query.sql
tasks_service/: pom.xml
tasks_service/src/main/java/org/example/: App.java
tasks_service/src/main/java/org/example/config/: LiquibaseListener.java  MySessionFactory.java
tasks_service/src/main/resources/: hibernate.properties
tasks_service/src/main/resources/liquibase/: changelog.yml
tasks_service/src/main/resources/liquibase/changes/: 2025_06_17_add_categories.yml  2025_06_17_add_tasks.yml  2025_06_17_add_users.yml  2025_06_18_add_cat_seq.yml  2025_06_18_add_tasks_seq.yml  2025_06_18_add_users_seq.yml
(+14 files in other folders)
