[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "jwt>=1.3.1",
    "loguru>=0.7.3",
    "openai>=1.87.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "python-telegram-bot>=22.1",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.41",
    "telegram>=0.0.1",
    "uvicorn>=0.34.3",
]
